# kdev-esp-idf

./: CMakeLists.txt  README.md  esp-idf.kdev4  kdev-esp-idf.kdev4
src/: CMakeLists.txt  esp-idf.cpp  esp-idf.h  esp-idf.json  flash_config.ui  flashjob.cpp  flashjob.h  flashjob.ui
